fixed z-indexes

--- a/react-app/src/components/NavBar/NavBar.css
+++ b/react-app/src/components/NavBar/NavBar.css
@@ -5,7 +5,7 @@
   position: sticky;
   top: 0;
   border-bottom: 1px solid #303030;
-  z-index: 10;
+  z-index: 14;
 }
 
 .navbar {
